--- a/Personal Website/style.css
+++ b/Personal Website/style.css
@@ -7,6 +7,28 @@ ul {
 	color: white;
 }
 
-h1 {
-	text-align: ;
+.page {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+/* Control the left side */
+.summary {
+  left: -10;
+}
+
+/* Control the right side */
+.bulk {
+  right: 0;
+}
+
+.p1 {
+	text-shadow: 2px 2px #000000;
+	font-size: 20px;
+	color: white;
 }
